--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Labeling_Algo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "Tyler Edwards",
   "license": "ISC",
