--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^14.0.6",
+    "csvparser": "^0.1.4",
     "glob": "^7.1.6",
     "js-levenshtein": "^1.1.6",
     "typescript": "^3.9.3"
